<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/textView2"
            android:layout_width="390dp"
            android:layout_height="173dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/display"
android:textDirection="firstStrongRtl"
            android:textSize="36sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@+id/textView2"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="oneBTN"
            android:text="@string/one" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@+id/textView2"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/button1"
            android:onClick="twoBTN"
            android:text="@string/two" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@+id/textView2"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/button2"
            android:onClick="threeBTN"
            android:text="@string/three" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@+id/textView2"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/button3"
            android:onClick="delBTN"
            android:text="@string/delete" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/button4"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="fourBTN"
            android:text="@string/four" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/button4"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/button5"
            android:onClick="fiveBTN"
            android:text="@string/five" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/button4"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/button6"
            android:onClick="sixBTN"
            android:text="@string/six" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/button4"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/button7"
            android:onClick="plusBTN"
            android:text="@string/add" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/button8"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="sevenBTN"
            android:text="@string/seven" />

        <Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/button8"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/button9"
            android:onClick="eightBTN"
            android:text="@string/eight" />

        <Button
            android:id="@+id/button11"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/button8"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/button10"
            android:onClick="nineBTN"
            android:text="@string/nine" />

        <Button
            android:id="@+id/button12"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/button8"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/button11"
            android:onClick="minusBTN"
            android:text="@string/minus" />

        <Button
            android:id="@+id/button13"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/button9"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="zeroBTN"
            android:text="@string/zero" />

        <Button
            android:id="@+id/button14"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/button9"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/button13"
            android:onClick="divideBTN"
            android:text="@string/divide" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/button9"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/button14"
            android:onClick="powerBTN"
            android:text="@string/power" />

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/button9"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/button15"
            android:onClick="multBTN"
            android:text="@string/multi" />

        <Button
            android:id="@+id/button17"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/button15"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:onClick="clearBTN"
            android:text="@string/clear" />

        <Button
            android:id="@+id/button18"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/button15"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/button17"
            android:onClick="brakBTN"
            android:text="@string/bracket" />

        <Button
            android:id="@+id/button19"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/button15"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/button18"
            android:onClick="deciBTN"
            android:text="@string/decimal" />

        <Button
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_below="@id/button15"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/button19"
            android:onClick="equalBTN"
            android:text="@string/equal" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>